resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubecom
  labels:
    app: kubecom
spec:
  selector:
    matchLabels:
      app: kubecom
  template:
    metadata:
      labels:
        app: kubecom
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: kubecom
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          image: "quay.io/django-hurricane/kubecom-demo:latest"
          imagePullPolicy: Always
          command: ["/bin/sh","-c"]
          args: ["python manage.py serve
                  --command 'migrate'
                  --command 'collectstatic --no-input'
                  --port 8080
                  --probe-port 9410
                  --static
                  --media
                 "]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /alive
              port: 9410
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 9410
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /startup
              port: 9410
