resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecom
  labels:
    app: kubecom
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: kubecom
